// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input to match snapshot 1`] = `
<div
  class="range-slider__input"
>
  <input
    class="range-slider__input__element"
    max="10"
    min="0"
    type="range"
    value="1"
  />
  <input
    class="range-slider__input__element"
    max="10"
    min="0"
    type="range"
    value="2"
  />
  <input
    class="range-slider__input__element"
    max="10"
    min="0"
    type="range"
    value="3"
  />
  <input
    class="range-slider__input__element"
    max="10"
    min="0"
    type="range"
    value="4"
  />
</div>
`;

exports[`InputElement to match snapshot 1`] = `
<input
  class="range-slider__input__element"
  max="10"
  min="0"
  type="range"
  value="5"
/>
`;
